--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "underscore": "~1.7.0",
     "rabbit.js": "~0.4.2",
-    "winston": "~0.8.3"
+    "winston": "~0.8.3",
+    "forever": "~0.14.1"
   },
   "devDependencies": {
     "should": "~4.3.0",
